progs/tests/constant/declaration_order_wrong.sy
a :: b + 1
b :: 2

start :: fn {
    a <=> b + 1
}

// error: #InvalidProgram
